@@ -3,6 +3,11 @@
       umit/pm/backend/scapy/__init__.py
       umit/pm/higwidgets/hignetwidgets.py:
       - Adding IPv6 editor.
+    * umit/pm/gui/widgets/propertygrid.py
+      umit/pm/gui/tabs/propertytab.py
+      umit/pm/backend/scapy/wrapper.py
+      umit/pm/manager/preferencemanager.py:
+        - Now PropertyTab has a font option.
 
     - Readapting existing code to the new structure as explained at:
         http://trac.umitproject.org/wiki/devguide#Namespaces
